# rust-plactice-repo

./: Cargo.toml  README.MD  command.md
EX/EX-1/: Cargo.toml
EX/EX-1/src/: main.rs
EX/EX-2/: Cargo.toml
EX/EX-2/src/: lib.rs
EX/EX-2/tests/: integration_test.rs
EX/EX-3/: Cargo.toml
EX/EX-3/src/: lib.rs  main.rs
EX/EX-3/src/core/config/: settings.rs
rust-plactice1/: Cargo.toml
rust-practice1/: Cargo.toml
rust-practice1/src/: main.rs
section1/section1-1/: Cargo.toml
section1/section1-2/plactice/: Cargo.toml
section1/section1-2/section1-2-1/: Cargo.toml
section1/section1-2/section1-2-2/: Cargo.toml
section1/section1-2/section1-2-3/: Cargo.toml
section1/section1-2/section1-2-4/: Cargo.toml
section1/section1-3/section1-3-1/: Cargo.toml
section1/section1-3/section1-3-2/: Cargo.toml
section1/section1-3/section1-3-3/: Cargo.toml
section2/section2-1/: Cargo.toml
section2/section2-1/src/: main.rs
section2/section2-2/section2-2-1/: Cargo.toml
section2/section2-2/section2-2-2/: Cargo.toml
section2/section2-2/section2-2-3/: Cargo.toml
section2/section2-2/section2-2-4/: Cargo.toml
section2/section2-3/section2-3-1/: Cargo.toml
section2/section2-3/section2-3-2/: Cargo.toml
section2/section2-3/section2-3-3/: Cargo.toml
section2/section2-4/section2-4-1/: Cargo.toml
section2/section2-4/section2-4-2/: Cargo.toml
section3/section3-1/: Cargo.toml
section3/section3-1/src/: main.rs
section3/section3-2/section3-2-1/: Cargo.toml
section3/section3-2/section3-2-2/: Cargo.toml
section3/section3-2/section3-2-3/: Cargo.toml
section3/section3-2/section3-2-4/: Cargo.toml
section3/section3-3/section3-3-1/: Cargo.toml
section3/section3-3/section3-3-2/: Cargo.toml
section3/section3-3/section3-3-3/: Cargo.toml
section3/section3-3/section3-3-4/: Cargo.toml
section3/section3-4/: Cargo.toml
section3/section3-4/src/: main.rs
section4/section4-1/section4-1-1/: Cargo.toml
section4/section4-1/section4-1-2/: Cargo.toml
section4/section4-1/section4-1-3/: Cargo.toml
section4/section4-1/section4-1-4/: Cargo.toml
section4/section4-2/section4-2-1/: Cargo.toml
section4/section4-2/section4-2-2/: Cargo.toml
section4/section4-2/section4-2-3/: Cargo.toml
section4/section4-2/section4-2-4/: Cargo.toml
(+51 files in other folders)
