[workspace]
members = [
    "EX/EX-1",
    "EX/EX-2",
    "rust-plactice1",
    "section1/section1-1",
    "section1/section1-2/plactice/plactice-1",
    "section1/section1-2/plactice/plactice-2",
    "section1/section1-2/section1-2-1",
    "section1/section1-2/section1-2-2",
    "section1/section1-2/section1-2-3",
    "section1/section1-2/section1-2-4",
    "section1/section1-3/section1-3-1",
    "section1/section1-3/section1-3-2",
    "section1/section1-3/section1-3-3",
    "section2/section2-1",
    "section2/section2-2/section2-2-1",
    "section2/section2-2/section2-2-2",
    "section2/section2-2/section2-2-3",
    "section2/section2-2/section2-2-4",
    "section2/section2-3/section2-3-1",
    "section2/section2-3/section2-3-2",
    "section2/section2-3/section2-3-3",
    "section2/section2-4/section2-4-1",
    "section2/section2-4/section2-4-2",
    "section3/section3-1",
    "section3/section3-2/section3-2-1",
    "section3/section3-2/section3-2-2",
    "section3/section3-2/section3-2-3",
    "section3/section3-2/section3-2-4",
    "section3/section3-3/section3-3-2",
    "section3/section3-3/section3-3-1",
    "section3/section3-3/section3-3-3",
    "section3/section3-3/section3-3-4",
    "section3/section3-4",
    "EX/EX-3",
    "section4/section4-1/section4-1-1",
    "section4/section4-1/section4-1-2",
    "section4/section4-1/section4-1-3",
    "section4/section4-1/section4-1-4",
    "section4/section4-2/section4-2-1",
    "section4/section4-2/section4-2-2",
    "section4/section4-2/section4-2-3",
    "section4/section4-2/section4-2-4",
    "section4/section4-3/section4-3-1", "section4/section4-3/section4-3-2",
]
resolver = "3"
